<resources>
    <string name="app_name">Testy na prawo jazdy</string>
    <string name="category_a_label">Kategoria A</string>
    <string name="category_b_label">Kategoria B</string>
    <string name="category_c_label">Kategoria C</string>
    <string name="category_d_label">Kategoria D</string>
    <string name="category_t_label">Kategoria T</string>
    <string name="rate_app_label">Polub nas</string>
    <string name="training_label">Nauka</string>
    <string name="exam_label">Egzamin</string>
    <string name="previous_question">Poprzednie pytanie</string>
    <string name="show_answer">Poprawna odpowiedź</string>
    <string name="next_question">Następnie pytanie</string>
    <string name="question_number_delimiter">/</string>
    <string name="question_points">Ilość punktów za pytanie</string>
    <string name="question_timer_title">Czas na zapoznanie się z pytaniem:</string>
</resources>
