<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DashboardFragment">

    <!--  CategoryType A -->
    <Button
        android:id="@+id/item_category_a"
        style="@style/DashboardItem"
        android:drawableTop="@drawable/ic_motorcycle_white_48dp"
        android:text="@string/category_a_label"
        app:layout_constraintBottom_toTopOf="@+id/item_category_c"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/item_category_b"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  CategoryType B -->
    <Button
        android:id="@+id/item_category_b"
        style="@style/DashboardItem"
        android:drawableTop="@drawable/ic_directions_car_white_48dp"
        android:text="@string/category_b_label"
        app:layout_constraintBottom_toTopOf="@+id/item_category_d"
        app:layout_constraintLeft_toRightOf="@+id/item_category_a"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  CategoryType C -->
    <Button
        android:id="@+id/item_category_c"
        style="@style/DashboardItem"
        android:drawableTop="@drawable/ic_local_shipping_white_48dp"
        android:text="@string/category_c_label"
        app:layout_constraintBottom_toTopOf="@+id/item_category_t"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/item_category_d"
        app:layout_constraintTop_toBottomOf="@+id/item_category_a" />

    <!--  CategoryType D -->
    <Button
        android:id="@+id/item_category_d"
        style="@style/DashboardItem"
        android:drawableTop="@drawable/ic_directions_bus_white_48dp"
        android:text="@string/category_d_label"
        app:layout_constraintBottom_toTopOf="@+id/item_rate_app"
        app:layout_constraintLeft_toRightOf="@+id/item_category_c"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_category_b" />

    <!--  CategoryType T -->
    <Button
        android:id="@+id/item_category_t"
        style="@style/DashboardItem"
        android:drawableTop="@drawable/ic_help_outline_white_48dp"
        android:text="@string/category_t_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/item_rate_app"
        app:layout_constraintTop_toBottomOf="@+id/item_category_c" />

    <!--  Rate app -->
    <Button
        android:id="@+id/item_rate_app"
        style="@style/DashboardItem"
        android:drawableTop="@drawable/ic_thumb_up_white_48dp"
        android:text="@string/rate_app_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/item_category_t"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_category_d" />

</android.support.constraint.ConstraintLayout>