<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/button_previous"
        style="@style/QuestionViewFooterButton"
        android:contentDescription="@string/previous_question"
        android:src="@drawable/ic_keyboard_arrow_left_white_48dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_hint"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_hint"
        style="@style/QuestionViewFooterButton"
        android:contentDescription="@string/show_answer"
        android:src="@drawable/ic_help_outline_white_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button_previous"
        app:layout_constraintRight_toLeftOf="@+id/button_next"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_next"
        style="@style/QuestionViewFooterButton"
        android:contentDescription="@string/next_question"
        android:src="@drawable/ic_keyboard_arrow_right_white_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button_hint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>