<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingBottom="6dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp">

        <LinearLayout
            android:id="@+id/container_question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/container_question_points"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/questions_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="42" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_number_delimiter"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/questions_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="2048" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_question_points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/container_question_number"
            app:layout_constraintRight_toLeftOf="@+id/total_timer_container"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/question_points"
                android:src="@drawable/ic_grade_white_48dp" />

            <TextView
                android:id="@+id/question_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="3" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/total_timer_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintLeft_toRightOf="@+id/container_question_points"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/question_points"
                android:src="@drawable/ic_timer_white_48dp" />

            <TextView
                android:id="@+id/total_timer_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="23:49" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:paddingTop="6dp">

        <TextView
            android:id="@+id/question_timer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_timer_title"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/question_timer_value" />

        <TextView
            android:id="@+id/question_timer_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/question_timer_title"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="00:27" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>